--- a/src/components/PageNavigation/BlockyNav/BlockyNav.astro
+++ b/src/components/PageNavigation/BlockyNav/BlockyNav.astro
@@ -69,7 +69,7 @@ const pageLinks = links.map((link) =>
                 <button
                     type="button"
                     id="sticky_nav__toggle"
-                    class="sticky_nav__toggle btn btn-primary btn-icon"
+                    class="sticky_nav__toggle btn btn-primary btn--icon"
                     data-menu-toggle
                     data-is-active="false"
                     aria-label="toggle navigation"
