Refactor card components for improved structure and styling; add SmallCta section

--- a/src/components/Cards/Alternating/Alternating.astro
+++ b/src/components/Cards/Alternating/Alternating.astro
@@ -4,7 +4,7 @@ interface Card {
         [key: string]: any;
     };
 }
-// import "./alternating.css";
+import "./alternating.css";
 import CustomImage from "@components/CustomImage.astro";
 const { cards } = Astro.props;
 ---
