--- a/src/components/Sections/CtaSection/CtaSection.astro
+++ b/src/components/Sections/CtaSection/CtaSection.astro
@@ -8,11 +8,11 @@ import Cards from "@components/Cards/Cards.astro";
 const { data } = Astro.props;
 ---
 
-<div class="cta full-width" data-animate-on-scroll>
+<div class="cta full-width">
     <Container>
         <div class="cta__wrapper">
             <div class="cta__content">
-                <div class="cta__heading" data-animate-on-scroll>
+                <div class="cta__heading">
                     {
                         data.core_values && (
                             <ul class="cta__core_values">
