--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,10 +41,10 @@ const record = await getData();
 
 		<link rel="sitemap" href="/sitemap.xml" />
 
-		<link rel="preconnect" href={record.url} />
+		<!-- <link rel="preconnect" href={record.url} />
 		<link rel="dns-prefetch" href={record.url} />
 		<link rel="preconnect" href={`${record.url}/assets`} />
-		<link rel="dns-prefetch" href={`${record.url}/assets`} />
+		<link rel="dns-prefetch" href={`${record.url}/assets`} /> -->
 
 		<link
 			rel="alternate"
@@ -105,8 +105,8 @@ const record = await getData();
 		<link rel="dns-prefetch" href="https://www.google-analytics.com" />
 		<link rel="preconnect" href="https://www.googletagmanager.com" />
 		<link rel="dns-prefetch" href="https://www.googletagmanager.com" />
-		<link rel="preconnect" href="/assets/" />
-		<link rel="dns-prefetch" href="/assets/" />
+		<!-- <link rel="preconnect" href="/assets/" />
+		<link rel="dns-prefetch" href="/assets/" /> -->
 
 		<link rel="preload" as="style" href="/assets/index.min.css" />
 		<link rel="preload" as="font" type="font/woff2" href={fonts.regular} />
