Refactor build script in package.json; add IconCard component and styles; update styles for StickyNav and BigName components; enhance global styles for better layout and responsiveness

--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -243,6 +243,7 @@ h1 {
 }
 
 [data-highlight="true"] {
+    padding: var(--container-padding-block);
     color: var(--clr-neutral-50);
     background-color: var(--clr-primary-darker);
 }
