--- a/src/components/Hero/BigName/BigName.astro
+++ b/src/components/Hero/BigName/BigName.astro
@@ -7,7 +7,7 @@ interface Props extends HeroProps {}
 const { title, excerpt, image } = Astro.props;
 ---
 
-<header class="big_name_hero">
+<header class="big_name_hero" data-centered="true">
     <Container>
         <div class="big_name_hero__wrapper full-height">
             <article class="big_name_hero__content">
