--- a/src/components/Hero/BigName/hero.css
+++ b/src/components/Hero/BigName/hero.css
@@ -2,8 +2,9 @@
     height: 100vh;
     max-height: 600px;
 }
+
 .big_name_hero__content {
-    color: var(--clr-primary);
+    color: var(--clr-neutral-900);
     max-width: 65ch;
 }
 
@@ -13,7 +14,7 @@
 }
 
 .big_name_hero__content h1 {
-    /* color: var(--clr-primary); */
+    color: var(--clr-primary-darker);
     font-size: var(--heading-xl);
     max-width: 50ch;
     text-transform: uppercase;
@@ -37,10 +38,11 @@
     width: 100%;
     height: 100%;
 
-    grid-column: 6 / -1;
+    grid-column: 1 / -1;
     grid-row: 1 / -1;
 
     z-index: -1;
+    object-position: 25% center !important;
 }
 
 .big_name_hero>.content-grid {
@@ -53,6 +55,17 @@
     align-items: center;
     z-index: 3;
 }
+.big_name_hero[data-centered="true"] .big_name_hero__wrapper {
+    height: 100%;
+}
+
+.big_name_hero[data-centered="true"] .big_name_hero__content {
+    height: 100%;
+    display: grid;
+    place-content: center;
+    justify-self: start;
+    text-align: left;
+}
 
 @media (min-width: 768px) {
     .big_name_hero {
@@ -60,7 +73,7 @@
     }
 
     .big_name_hero__content h1 {
-        font-size: var(--heading-3xl);
+        font-size: var(--heading-4xl);
     }
 
     .big_name_hero__wrapper {
@@ -69,6 +82,13 @@
         align-items: center;
         justify-content: space-between;
         z-index: 10;
+    }
+    .big_name_hero[data-centered="true"] .big_name_hero__wrapper {
+        height: 100%;
+    }
+    .big_name_hero[data-centered="true"] .big_name_hero__content {
+        justify-self: start;
+        text-align: left    ;
     }
 
     .big_name_hero__image,
@@ -87,7 +107,5 @@
         height: 100%;
         display: grid;
         place-content: center;
-        /* padding: var(--size-8); */
-        /* background-color: var(--clr-primary); */
     }
 }
