Refactor project structure and enhance gallery functionality
- Updated package.json scripts for better clarity and added test commands.
- Removed unnecessary padding from highlighted elements in global.css.
- Modified Cards component to use ShortGallery instead of Gallery.
- Added new Gallery component with lightbox functionality for image viewing.
- Created ShortGallery component for displaying grouped images with a "View More" feature.
- Enhanced IconCard styles for better visual consistency.
- Updated Overflow component to allow HTML content in titles and added a contact button.
- Improved PageNavigation component to manage sticky menu behavior based on hero style.
- Added new TwoLocation contact section for displaying information in two columns.
- Fixed minor styling issues across various components for better layout and responsiveness.
- Updated environment variables handling in pocketbase utility for better configuration management.

--- a/src/components/Cards/Cards.astro
+++ b/src/components/Cards/Cards.astro
@@ -11,10 +11,11 @@ import Alternating from "./Alternating/Alternating.astro";
 import Basic from "./Basic/Basic.astro";
 import BlockyCards from "./Blocky/BlockyCards.astro";
 import InfoCard from "./Info/InfoCard.astro";
-import Gallery from "./Fancy/Gallery.astro";
+// import Gallery from "./Fancy/Gallery.astro";
 import ContentCard from "./ContentCard/ContentCard.astro";
 import ThreeColumns from "./ThreeColumns/ThreeColumns.astro";
 import IconCard from "./IconCard/IconCard.astro";
+import ShortGallery from "./ShortGallery/ShortGallery.astro";
 
 const { card_type, cards, isGallery } = Astro.props;
 
@@ -28,7 +29,8 @@ const cardProps = {
 {card_type === "basic" && <Basic {...cardProps} />}
 {card_type === "info" && <InfoCard {...cardProps} />}
 {card_type === "alternating" && <Alternating {...cardProps} />}
-{card_type === "gallery" && <Gallery {...cardProps} /> }
+<!-- {card_type === "gallery" && <Gallery {...cardProps} /> } -->
+{card_type === "gallery" && <ShortGallery {...cardProps} /> }
 {card_type === "content" && <ContentCard {...cardProps} />}
 {card_type === "icon card" && <IconCard {...cardProps} />}
 <!-- <ThreeColumns {...cardProps} /> -->
