--- a/src/components/Sections/Stats/StatsGrid/StatsGrid.astro
+++ b/src/components/Sections/Stats/StatsGrid/StatsGrid.astro
@@ -18,7 +18,7 @@ const {cards, data} = Astro.props
 ---
 
 <Container>
-    <div class="stats_container container">
+    <div class="stats_container">
         <div class="stats_grid">
             <div class="stats_grid__card">
                 <div class="card_content">
