--- a/src/components/Hero/Overflow/hero.css
+++ b/src/components/Hero/Overflow/hero.css
@@ -7,7 +7,8 @@
 }
 
 .overflow_hero__content h1 {
-    font-size: var(--heading-large);
+    color: var(--clr-primary);
+    font-size: var(--heading-4xl);
     max-width: 50ch;
 }
 
@@ -21,7 +22,7 @@
 
     width: 100%;
     height: 100%;
-    background: hsl(90 15% 15% / 0.65);
+    background: hsl(90 15% 15% / 0.5);
 }
 
 .overflow_hero__image {
