--- a/src/components/Sections/Contact Sections/ContactSection.astro
+++ b/src/components/Sections/Contact Sections/ContactSection.astro
@@ -1,9 +1,17 @@
 ---
 import DefaultContact from "./DefaultContact/DefaultContact.astro"
 import TwoColumnContact from "./TwoColumnContact/TwoColumnContact.astro"
+import TwoLocation from "./TwoLocation/TwoLocation.astro"
 
 const {title, info, location, style} = Astro.props
+
+const contactProps = {
+    title,
+    info,
+    location
+}
 ---
 
-{style === "two column" && <TwoColumnContact title={title} info={info} location={location} />}
-{style === "default" && <DefaultContact title={title} info={info} location={location} />}
+{style === "two column" && <TwoColumnContact {...contactProps} />}
+{style === "default" && <DefaultContact {...contactProps} />}
+{style === "two location" && <TwoLocation {...contactProps} />}
