--- a/src/components/Sections/CtaSection/CtaSection.astro
+++ b/src/components/Sections/CtaSection/CtaSection.astro
@@ -8,7 +8,7 @@ import Cards from "@components/Cards/Cards.astro";
 const { data } = Astro.props;
 ---
 
-<div class="cta full-width">
+<div class="content_section full-width" data-offscreen>
     <Container>
         <div class="cta__wrapper">
             <div class="cta__content">
