--- a/src/components/Sections/CtaSection/SmallCta/SmallCta.astro
+++ b/src/components/Sections/CtaSection/SmallCta/SmallCta.astro
@@ -7,7 +7,7 @@ import CustomImage from "@components/CustomImage.astro";
 import Cards from "@components/Cards/Cards.astro";
 const { data } = Astro.props;
 ---
-<div class="content_section">
+<div class="content_section" data-offscreen>
     <Container>
         <section class="small_cta">
             <h2 class="smal_cta__title">{data.title}</h2>
