--- a/src/components/Sections/CtaSection/ThreeImageCta/style.css
+++ b/src/components/Sections/CtaSection/ThreeImageCta/style.css
@@ -3,7 +3,7 @@
     display: grid;
     grid-template-rows: repeat(2, auto);
     gap: var(--size-4);
-    padding: var(--container-padding-block) 0;
+    /* padding: var(--container-padding-block) 0; */
 }
 
 .three_image_cta__content .info_card {
