--- a/src/components/Sections/CtaSection/VerticalImageCta/VerticalImageCta.astro
+++ b/src/components/Sections/CtaSection/VerticalImageCta/VerticalImageCta.astro
@@ -7,7 +7,7 @@ import VerticalImages from "@components/Sections/VerticalImages/VerticalImages.a
 const { data, core_values } = Astro.props;
 ---
 
-<div class="vertical_cta" >
+<div class="vertical_cta content_section" data-offscreen>
     <Container>
         <VerticalImages data={data} core_values={core_values} />
     </Container>
