--- a/src/components/Sections/Partners/Partners.astro
+++ b/src/components/Sections/Partners/Partners.astro
@@ -19,7 +19,7 @@ const cards = data.expand.section_grid;
 
 ---
 
-<div class="partners container">
+<div class="partners container content_section" data-offscreen>
     <Container> 
         <!-- <h2 class="partners__title">{data.title}</h2> -->
         <div class="partners-scroll-wrapper">
