--- a/src/components/Sections/Partners/PartnersGrid/PartnersGrid.astro
+++ b/src/components/Sections/Partners/PartnersGrid/PartnersGrid.astro
@@ -16,7 +16,7 @@ interface Card {
 }
 ---
 
-<div class="partners-grid">
+<div class="partners-grid content_section" data-offscreen>
   <Container>
     <div class="partners-grid__wrapper">
       <div class="content">
