--- a/src/components/Sections/Section/Section.astro
+++ b/src/components/Sections/Section/Section.astro
@@ -12,6 +12,7 @@ const isGallery = data.expand.image?.length > 1;
     class="content_section"
     data-highlight={data.highlight}
     id={data.type.split(" ").join("-")}
+    data-offscreen
 >
     <Container>
         <div class="content_section__content_wrapper">
