--- a/src/components/Sections/Testimonial/TestimonialWithStats/TestimonialWithStats.astro
+++ b/src/components/Sections/Testimonial/TestimonialWithStats/TestimonialWithStats.astro
@@ -73,7 +73,7 @@ const {
 } = Astro.props;
 ---
 
-<section class="content_section testimonial_section" data-highlight={data?.highlight}>
+<section class="content_section testimonial_section" data-highlight={data?.highlight} data-offscreen>
   <Container>
     <article class="testimonial_header content_section__article">
       <header class="content_section__header">
