--- a/src/components/PageNavigation/PageNavigation.astro
+++ b/src/components/PageNavigation/PageNavigation.astro
@@ -19,7 +19,7 @@ const props = Astro.props;
 const blackText =
     props.hero_style === "two column" || props.hero_style === "two square" || props.hero_style === "blocky";
 
-const fixedMenu = ["two column", "two square", "default"].includes(props.hero_style) ? true : false;
+const fixedMenu = ["vertical with image", "two square", "default"].includes(props.hero_style) ? true : false;
 console.log(props.hero_style, fixedMenu);
 ---
 <StickyNav
