--- a/src/components/Sections/CtaSection/ThreeImageCta/ThreeImageCta.astro
+++ b/src/components/Sections/CtaSection/ThreeImageCta/ThreeImageCta.astro
@@ -24,41 +24,43 @@ let info = data.core_values.split(",").map((value) => ({
 // console.log(info);
 ---
 
-<Container>
-    <div
-        class="three_image_cta__container "
-        data-highlight={data.highlight}
-    >
-        <div class="three_image_cta__content_wrapper">
-            <article class="three_image_cta__content">
-                <header class="content_section__header">
-                    <InfoCard
-                        cards={info as unknown as Array<{
-                            [key: string]: { [key: string]: any };
-                        }>}
-                    />
-                    <h2>{data.title}</h2>
-                </header>
-                <slot set:html={data.content} />
-
-                <div class="btn_wrapper">
-                    <a href="#contact" class="btn btn-md btn-secondary btn-outline"
-                        >Let's Talk</a
-                    >
-                </div>
-            </article>
+<div class="content_section" data-offscreen>
+    <Container>
+        <div
+            class="three_image_cta__container "
+            data-highlight={data.highlight}
+        >
+            <div class="three_image_cta__content_wrapper">
+                <article class="three_image_cta__content">
+                    <header class="content_section__header">
+                        <InfoCard
+                            cards={info as unknown as Array<{
+                                [key: string]: { [key: string]: any };
+                            }>}
+                        />
+                        <h2>{data.title}</h2>
+                    </header>
+                    <slot set:html={data.content} />
+    
+                    <div class="btn_wrapper">
+                        <a href="#contact" class="btn btn-md btn-secondary btn-outline"
+                            >Let's Talk</a
+                        >
+                    </div>
+                </article>
+            </div>
+            <div class="three_image_cta__image_wrapper">
+                {
+                    data.expand.image.map((image: any, idx: number) => (
+                        <CustomImage
+                            image={image}
+                            classlist={`three_image_cta___image three_image_cta___image_${idx}`}
+                            size="medium"
+                            eager={false}
+                        />
+                    ))
+                }
+            </div>
         </div>
-        <div class="three_image_cta__image_wrapper">
-            {
-                data.expand.image.map((image: any, idx: number) => (
-                    <CustomImage
-                        image={image}
-                        classlist={`three_image_cta___image three_image_cta___image_${idx}`}
-                        size="medium"
-                        eager={false}
-                    />
-                ))
-            }
-        </div>
-    </div>
-</Container>
+    </Container>
+</div>
